# hyprwat

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  TODO.md
.github/workflows/: cmake-multi-platform.yml
docs/: COMPOSITORS.md
examples/: hyprwat.conf  multiple_inputs.yaml  powerprofiles.sh  powerprofiles.yaml  wallpaper.sh  wifi.sh
examples/custom_menu/: display.yaml  main.yaml  power.yaml  widgets.yaml
man/: hyprwat.6
scripts/: release.sh
src/: choice.hpp  config.cpp  config.hpp  input.cpp  input.hpp  main.cpp  ui.cpp  ui.hpp  util.cpp  util.hpp  vec.hpp
src/audio/: audio.cpp  audio.hpp  volume_daemon.cpp  volume_daemon.hpp
src/compositor/: compositor.hpp  detect.cpp  fenriz.cpp  fenriz.hpp  fenriz_test.cpp
src/daemon/: daemon.cpp  daemon.hpp
src/dbus/: dbus.cpp  dbus.hpp  network_manager.cpp  network_manager.hpp  pipewire.hpp
src/debug/: log.hpp
src/file/: thumbnail.cpp  thumbnail.hpp
src/flows/: audio_flow.cpp  audio_flow.hpp  custom_flow.cpp  custom_flow.hpp  flow.hpp  overview_flow.cpp  overview_flow.hpp  simple_flows.cpp  simple_flows.hpp  volume_flow.cpp  volume_flow.hpp  wallpaper_flow.cpp  wallpaper_flow.hpp  wifi_flow.cpp  wifi_flow.hpp
src/frames/: custom.cpp  custom.hpp  images.cpp  images.hpp  input.cpp  input.hpp  overview.cpp  overview.hpp  selector.cpp  selector.hpp  text.cpp  text.hpp  volume.cpp  volume.hpp
src/hyprland/: ipc.cpp  ipc.hpp
src/net/: network_manager.cpp  network_manager.hpp
src/renderer/: egl_context.cpp  egl_context.hpp
src/selection/: selector.cpp
src/wallpaper/: thumbnail.cpp  thumbnail.hpp  wallpaper.cpp  wallpaper.hpp
src/wayland/: display.cpp  display.hpp  input.cpp  input.hpp  layer_surface.cpp  layer_surface.hpp  shm.cpp  shm.hpp  wayland.cpp  wayland.hpp
src/wayland/protocols/: hyprland-toplevel-export-v1-client-protocol.c  hyprland-toplevel-export-v1-client-protocol.h  linux-dmabuf-unstable-v1-client-protocol.c  linux-dmabuf-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1-client-protocol.c  xdg-shell-client-protocol.c  xdg-shell-client-protocol.h
